correct some alignment issue

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ html{
   
   .button-hero p {
     position: absolute;
-    top: 0.2em;
+    top: 0.15em;
     left: 1.15em;
     margin: 0;
     padding: 0;
